--- a/site/content/less/footer.less
+++ b/site/content/less/footer.less
@@ -35,9 +35,12 @@
 
 #feedback {
     display: block;
-    margin-bottom: @spacing-sm;
     font-family: @font-family-mono;
     .text-color-inverted-secondary();
+
+    #footer.tall & {
+        margin-bottom: @spacing-sm;
+    }
 }
 
 #footer {
@@ -75,7 +78,11 @@
 
 #push {
     height: (@spacing-md * 2 + @line-height-px); // footer height for 1 line
-    margin-bottom: @spacing-lg;
+    margin-bottom: (-@spacing-lg * 2);
+
+    body.has-tall-footer & {
+        margin-bottom: (-@spacing-lg * 2 + @spacing-sm + @line-height-px);
+    }
 
     &.tall {
         height: (@spacing-md * 2 + @spacing-sm + @line-height-px * 2); // 2 line footer
