--- a/site/content/less/theme-swatches.less
+++ b/site/content/less/theme-swatches.less
@@ -2,7 +2,10 @@
 @swatch-size: (@spacing-md * 4);
 
 #themes {
-    padding-bottom: -@spacing-md;
+    // clearfix
+    display: inline-block;
+    width: 100%;
+    margin-bottom: -@spacing-md;
 }
 
 .theme {
